// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render GoalsPage with dailyGoals and longTermGoals 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Goals
      </h1>
    </div>
  </div>
  <div
    className="content-container"
  >
    <h2>
      Daily Goals
    </h2>
    <GoalForm
      onSubmit={[Function]}
    />
    <div
      className="list-body"
    >
      <DailyGoalListItem
        completed={false}
        goal="Run"
        id="1"
        key="1"
      />
      <DailyGoalListItem
        completed={true}
        goal="Drink water"
        id="2"
        key="2"
      />
      <DailyGoalListItem
        completed={false}
        goal="Eat vegetables"
        id="3"
        key="3"
      />
    </div>
    <h2>
      Long-Term Goals
    </h2>
    <GoalForm
      onSubmit={[Function]}
    />
    <div
      className="list-body"
    >
      <p>
        hi
      </p>
    </div>
  </div>
</div>
`;

exports[`should render GoalsPage with empty messages 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Goals
      </h1>
    </div>
  </div>
  <div
    className="content-container"
  >
    <h2>
      Daily Goals
    </h2>
    <GoalForm
      onSubmit={[Function]}
    />
    <div
      className="list-body"
    >
      <div
        className="list-item list-item--message"
      >
        <span>
          No daily goals
        </span>
      </div>
    </div>
    <h2>
      Long-Term Goals
    </h2>
    <GoalForm
      onSubmit={[Function]}
    />
    <div
      className="list-body"
    >
      <div
        className="list-item list-item--message"
      >
        <span>
          No long-term goals
        </span>
      </div>
    </div>
  </div>
</div>
`;
